# BRRtools

./: .gitattributes  .gitignore  README.md  meson.build
src/: brr.c  brr.h  brr_decoder.c  brr_encoder.c  common.h  spc_decoder.c
tests/: run-tests  setup-test-env.sh  test-decode  test-encode-wrap  test-encode-wrap-real  test-gauss  test-gauss-encode  test-loop  test-resample  test-resample-loop  test-unlooped-header  test-valgrind
tests/encode-wrap/: .gitignore  encode-wrap.brr
tests/encode-wrap-real/: .gitignore
tests/excess/: excess.brr
tests/loop/: .gitignore  header.brr  loop-b.brr  loop-c.brr  loop-l.brr  loop-n.brr  loop-s.brr
tests/timecop/: .gitignore  out0.brr  reencode-b.brr  reencode-c.brr  reencode-l.brr  reencode-n.brr  reencode-s.brr
